// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagInputField rendering renders expected elements 1`] = `
<div
  className="TagInputField"
>
  <LabelLine
    htmlFor="random-id"
    id="random-id-label"
    optional={false}
    text="Label"
  />
  <TagInput
    aria-describedby="random-id-helper"
    aria-labelledby="random-id-label"
    id="random-id"
    onChange={[MockFunction]}
    onError={[MockFunction]}
    tags={
      [
        "foo",
      ]
    }
    validate={[MockFunction]}
  />
  <FieldHelper
    id="random-id-helper"
    text="Helper text"
  />
</div>
`;

exports[`TagInputField rendering renders expected elements if error is set 1`] = `
<div
  className="TagInputField"
>
  <LabelLine
    htmlFor="random-id"
    id="random-id-label"
    optional={false}
    text="Label"
  />
  <TagInput
    aria-describedby="random-id-error"
    aria-labelledby="random-id-label"
    error="Error"
    id="random-id"
    onChange={[MockFunction]}
    onError={[MockFunction]}
    tags={
      [
        "foo",
      ]
    }
    validate={[MockFunction]}
  />
  <FieldError
    id="random-id-error"
    text="Error"
  />
</div>
`;

exports[`TagInputField rendering renders expected elements when className is set 1`] = `
<div
  className="TagInputField TestClass"
>
  <LabelLine
    htmlFor="random-id"
    id="random-id-label"
    text="Label"
  />
  <TagInput
    aria-describedby="random-id-helper"
    aria-labelledby="random-id-label"
    id="random-id"
    onChange={[MockFunction]}
    onError={[MockFunction]}
    tags={
      [
        "foo",
      ]
    }
    validate={[MockFunction]}
  />
  <FieldHelper
    id="random-id-helper"
  />
</div>
`;

exports[`TagInputField rendering shows optional text if tags is empty 1`] = `
<div
  className="TagInputField"
>
  <LabelLine
    htmlFor="random-id"
    id="random-id-label"
    optional={true}
    text="Label"
  />
  <TagInput
    aria-describedby="random-id-helper"
    aria-labelledby="random-id-label"
    id="random-id"
    onChange={[MockFunction]}
    onError={[MockFunction]}
    tags={[]}
    validate={[MockFunction]}
  />
  <FieldHelper
    id="random-id-helper"
  />
</div>
`;
